# JaeOS

./: .gitignore  CMakeLists.txt  README.md
include/common/: asm.h  param.h  platform.h  rv64.h  types.h
include/cpu/: cpu.h
include/dev/: dtb.h  plic.h  timer.h  uart.h
include/driver/: virtio.h
include/lib/: jaeio.h  list.h  printf.h  queue.h  string.h
include/lock/: lock.h  mutex.h
include/mmu/: memory.h  mmu.h  pmm.h  vmm.h
include/process/: proc.h  procinit.h  thread.h  tsleep.h
include/sbi/: sbi.h
include/signal/: signal.h
include/start/: main.h
include/trap/: trap.h  trapframe.h
kernel/boot/include/: init.h  main.h
kernel/boot/src/: boot.S  main.c
kernel/dev/include/: dtb.h  uart.h
kernel/dev/src/: dtb.c  uart.c
kernel/hal/: README.md
kernel/hal/include/: sbi.h
kernel/hal/src/: sbi.c
kernel/mmu/include/: memory.h
lib/include/: jaeio.h  printf.h
linker/: qemu_kernel.ld
src/: CMakeLists.txt  main.c
src/cpu/: CMakeLists.txt  cpu.c
src/dev/: CMakeLists.txt  dtb.c  plic.c  timer.c  uart.c
src/driver/: virtio.c
src/lib/: CMakeLists.txt  printf.c  string.c
src/lock/: CMakeLists.txt  mutex.c
src/mmu/: CMakeLists.txt  pmm.c  vmm.c
src/process/: CMakeLists.txt  proc.c  thread.c  tsleep.c
src/sbi/: CMakeLists.txt  sbi.c
src/signal/: CMakeLists.txt  signal.c
src/start/: CMakeLists.txt  _main.c  boot.S  init.c  start.S
src/trap/: CMakeLists.txt  ktrap_vector.S  signal_trampoline.S  trampoline.S  trap.c
